# h-pyramid-sentry

./: .cookiecutter.json  .coveragerc  .gitignore  .isort.cfg  .pydocstyle  .pylintrc  .python-version  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.cookiecutter/: cookiecutter.json
.cookiecutter/includes/README/: head.md
.cookiecutter/includes/pyproject.toml/: dependencies
.cookiecutter/includes/pytest/: filterwarnings
.cookiecutter/includes/setuptools/: install_requires
.cookiecutter/includes/tox/: deps
.github/workflows/: ci.yml  pythonpackage.yml
h_pyramid_sentry/: __init__.py
h_pyramid_sentry/test/: matcher.py
src/h_pyramid_sentry/: __init__.py  event.py  event_filter.py  exceptions.py  subscribers.py
src/h_pyramid_sentry/filters/: pyramid.py
tests/: .pylintrc  conftest.py
tests/h_pyramid_sentry/: __init___test.py  event_filter_test.py
tests/pytest_plugins/: factory_boy.py
tests/unit/: conftest.py
tests/unit/h_pyramid_sentry/: __init___test.py  event_filter_test.py  subscribers_test.py
tests/unit/h_pyramid_sentry/filters/: pyramid_test.py
