# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = h_pyramid_sentry
version = 1.1
description = A Pyramid plugin for integrating Sentry error reporting
long_description = file: README.md
long_description_content_type = text/markdown

author = Hypothesis Engineering Team
author_email = eng@list.hypothes.is
maintainer = Hypothesis Engineering Team
maintainer_email = eng@list.hypothes.is
url = https://web.hypothes.is/

# From: https://pypi.org/pypi?:action=list_classifiers
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.6
    Framework :: Pyramid
    Topic :: System :: Monitoring

project_urls=
    Source=https://github.com/hypothesis/h-pyramid-sentry
license=License :: OSI Approved :: BSD License
platforms=Operating System :: OS Independent

[options]
install_requires =
    sentry-sdk
    pyramid

tests_require=
    pytest
    coverage
    h-matchers>=1.0, <1.1
    pyramid_retry
    celery

